--- a/pv168 3. uloha/src/main/java/cz/fi/muni/pv168/mainForm.form
+++ b/pv168 3. uloha/src/main/java/cz/fi/muni/pv168/mainForm.form
@@ -63,7 +63,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="findTextbox">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Jarda"/>
+        <Property name="text" type="java.lang.String" value="Valenta"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="findTextboxActionPerformed"/>
